--- a/index.htm
+++ b/index.htm
@@ -2713,7 +2713,7 @@
                     <div class="space-y-4">
                     <div class="bg-blue-50 rounded-xl p-4 border border-blue-100">
                         <h3 class="font-semibold text-slate-800 mb-3">✈️ Giorno 1 - Arrivo a Negombo</h3>
-                        <a href="https://photos.google.com/u/0/album/AF1QipNvx6MMJ-buVXYJdZcfT0449p5KX9pNbctJecfy?hl=it" 
+                        <a href="https://drive.google.com/drive/folders/16Tw-C9rAA96d8fOg3qqTXzJVWa01T_Pb?usp=drive_link" 
                            target="_blank" 
                            class="inline-block bg-white px-4 py-2 rounded-lg font-medium text-slate-800 hover:bg-slate-50 transition-colors border border-slate-200 shadow-sm text-sm">
                             📷 Visualizza Album Giorno 1
@@ -2722,100 +2722,100 @@
                     
                     <div class="bg-emerald-50 rounded-xl p-4 border border-emerald-100">
                         <h3 class="font-semibold text-slate-800 mb-3">🏰 Giorno 2 - Galle</h3>
-                        <a href="#" 
+                        <a href="https://drive.google.com/drive/folders/1sRT_ANP3YHzSFQZ8VL50sNONxKF_gDzn?usp=drive_link" 
                            target="_blank" 
-                           class="inline-block bg-white px-4 py-2 rounded-lg font-medium text-slate-600 border border-slate-200 shadow-sm text-sm cursor-not-allowed opacity-50">
-                            📷 Album in arrivo...
+                           class="inline-block bg-white px-4 py-2 rounded-lg font-medium text-slate-800 hover:bg-slate-50 transition-colors border border-slate-200 shadow-sm text-sm">
+                            📷 Visualizza Album Giorno 2
                         </a>
                     </div>
 
                     <div class="bg-amber-50 rounded-xl p-4 border border-amber-100">
                         <h3 class="font-semibold text-slate-800 mb-3">🐘 Giorno 3 - Udawalawe National Park</h3>
-                        <a href="#" 
+                        <a href="https://drive.google.com/drive/folders/1L5OODi579rB08adPe9zVsadX_gM6GHNQ?usp=drive_link" 
                            target="_blank" 
-                           class="inline-block bg-white px-4 py-2 rounded-lg font-medium text-slate-600 border border-slate-200 shadow-sm text-sm cursor-not-allowed opacity-50">
-                            📷 Album in arrivo...
+                           class="inline-block bg-white px-4 py-2 rounded-lg font-medium text-slate-800 hover:bg-slate-50 transition-colors border border-slate-200 shadow-sm text-sm">
+                            📷 Visualizza Album Giorno 3
                         </a>
                     </div>
 
                     <div class="bg-violet-50 rounded-xl p-4 border border-violet-100">
                         <h3 class="font-semibold text-slate-800 mb-3">🚂 Giorno 4 - Ella</h3>
-                        <a href="#" 
+                        <a href="https://drive.google.com/drive/folders/1Y7YdQHnRbLsa9YwOjbtUdPwgjNA10hAN?usp=drive_link" 
                            target="_blank" 
-                           class="inline-block bg-white px-4 py-2 rounded-lg font-medium text-slate-600 border border-slate-200 shadow-sm text-sm cursor-not-allowed opacity-50">
-                            📷 Album in arrivo...
+                           class="inline-block bg-white px-4 py-2 rounded-lg font-medium text-slate-800 hover:bg-slate-50 transition-colors border border-slate-200 shadow-sm text-sm">
+                            📷 Visualizza Album Giorno 4
                         </a>
                     </div>
 
                     <div class="bg-teal-50 rounded-xl p-4 border border-teal-100">
                         <h3 class="font-semibold text-slate-800 mb-3">🍃 Giorno 5 - Distretto di Nuwara Eliya</h3>
-                        <a href="#" 
+                        <a href="https://drive.google.com/drive/folders/19VuLpDJm2tXFiygWc-sqscroOMs3W0BW?usp=drive_link" 
                            target="_blank" 
-                           class="inline-block bg-white px-4 py-2 rounded-lg font-medium text-slate-600 border border-slate-200 shadow-sm text-sm cursor-not-allowed opacity-50">
-                            📷 Album in arrivo...
+                           class="inline-block bg-white px-4 py-2 rounded-lg font-medium text-slate-800 hover:bg-slate-50 transition-colors border border-slate-200 shadow-sm text-sm">
+                            📷 Visualizza Album Giorno 5
                         </a>
                     </div>
 
                     <div class="bg-blue-50 rounded-xl p-4 border border-blue-100">
                         <h3 class="font-semibold text-slate-800 mb-3">👑 Giorno 6 - Kandy</h3>
-                        <a href="#" 
+                        <a href="https://drive.google.com/drive/folders/1SYs40WNRjxIILillbVf37dJNKbLbZRVF?usp=drive_link" 
                            target="_blank" 
-                           class="inline-block bg-white px-4 py-2 rounded-lg font-medium text-slate-600 border border-slate-200 shadow-sm text-sm cursor-not-allowed opacity-50">
-                            📷 Album in arrivo...
+                           class="inline-block bg-white px-4 py-2 rounded-lg font-medium text-slate-800 hover:bg-slate-50 transition-colors border border-slate-200 shadow-sm text-sm">
+                            📷 Visualizza Album Giorno 6
                         </a>
                     </div>
 
                     <div class="bg-emerald-50 rounded-xl p-4 border border-emerald-100">
                         <h3 class="font-semibold text-slate-800 mb-3">🏛️ Giorno 7 - Dambulla</h3>
-                        <a href="#" 
+                        <a href="https://drive.google.com/drive/folders/14CymexTbB2asH6nYrSx1urBFi00lisPD?usp=drive_link" 
                            target="_blank" 
-                           class="inline-block bg-white px-4 py-2 rounded-lg font-medium text-slate-600 border border-slate-200 shadow-sm text-sm cursor-not-allowed opacity-50">
-                            📷 Album in arrivo...
+                           class="inline-block bg-white px-4 py-2 rounded-lg font-medium text-slate-800 hover:bg-slate-50 transition-colors border border-slate-200 shadow-sm text-sm">
+                            📷 Visualizza Album Giorno 7
                         </a>
                     </div>
 
                     <div class="bg-amber-50 rounded-xl p-4 border border-amber-100">
                         <h3 class="font-semibold text-slate-800 mb-3">🦁 Giorno 8 - Sigiriya e Polonnaruwa</h3>
-                        <a href="#" 
+                        <a href="https://drive.google.com/drive/folders/1Uxrz2VczNG2IIYN9g4k4ZueSGAyJnTiN?usp=drive_link" 
                            target="_blank" 
-                           class="inline-block bg-white px-4 py-2 rounded-lg font-medium text-slate-600 border border-slate-200 shadow-sm text-sm cursor-not-allowed opacity-50">
-                            📷 Album in arrivo...
+                           class="inline-block bg-white px-4 py-2 rounded-lg font-medium text-slate-800 hover:bg-slate-50 transition-colors border border-slate-200 shadow-sm text-sm">
+                            📷 Visualizza Album Giorno 8
                         </a>
                     </div>
 
                     <div class="bg-violet-50 rounded-xl p-4 border border-violet-100">
                         <h3 class="font-semibold text-slate-800 mb-3">🏖️ Giorno 9 - Trincomalee/Pasikudah</h3>
-                        <a href="#" 
+                        <a href="https://drive.google.com/drive/folders/1C6cmZDeTNnNMaa28XRbSQZWG0qj3dhAC?usp=drive_link" 
                            target="_blank" 
-                           class="inline-block bg-white px-4 py-2 rounded-lg font-medium text-slate-600 border border-slate-200 shadow-sm text-sm cursor-not-allowed opacity-50">
-                            📷 Album in arrivo...
+                           class="inline-block bg-white px-4 py-2 rounded-lg font-medium text-slate-800 hover:bg-slate-50 transition-colors border border-slate-200 shadow-sm text-sm">
+                            📷 Visualizza Album Giorno 9
                         </a>
                     </div>
 
                     <div class="bg-teal-50 rounded-xl p-4 border border-teal-100">
                         <h3 class="font-semibold text-slate-800 mb-3">🏖️ Giorno 10 - Trincomalee/Pasikudah</h3>
-                        <a href="#" 
+                        <a href="https://drive.google.com/drive/folders/1oZOnYtAQKU5nUtn3TnZ5zNG5lHtZeSv4?usp=drive_link" 
                            target="_blank" 
-                           class="inline-block bg-white px-4 py-2 rounded-lg font-medium text-slate-600 border border-slate-200 shadow-sm text-sm cursor-not-allowed opacity-50">
-                            📷 Album in arrivo...
+                           class="inline-block bg-white px-4 py-2 rounded-lg font-medium text-slate-800 hover:bg-slate-50 transition-colors border border-slate-200 shadow-sm text-sm">
+                            📷 Visualizza Album Giorno 10
                         </a>
                     </div>
 
                     <div class="bg-blue-50 rounded-xl p-4 border border-blue-100">
                         <h3 class="font-semibold text-slate-800 mb-3">🏛️ Giorno 11 - Anuradhapura</h3>
-                        <a href="#" 
+                        <a href="https://drive.google.com/drive/folders/17fzlprU9b_LvvR0iFHAdvw_FRuYUl9CV?usp=drive_link" 
                            target="_blank" 
-                           class="inline-block bg-white px-4 py-2 rounded-lg font-medium text-slate-600 border border-slate-200 shadow-sm text-sm cursor-not-allowed opacity-50">
-                            📷 Album in arrivo...
+                           class="inline-block bg-white px-4 py-2 rounded-lg font-medium text-slate-800 hover:bg-slate-50 transition-colors border border-slate-200 shadow-sm text-sm">
+                            📷 Visualizza Album Giorno 11
                         </a>
                     </div>
 
                     <div class="bg-emerald-50 rounded-xl p-4 border border-emerald-100">
                         <h3 class="font-semibold text-slate-800 mb-3">✈️ Giorno 12 - Negombo/Colombo - Partenza</h3>
-                        <a href="#" 
+                        <a href="https://drive.google.com/drive/folders/1we4rBsIsSIPJtpmizd6BL_oR5ZVL-nxp?usp=drive_link" 
                            target="_blank" 
-                           class="inline-block bg-white px-4 py-2 rounded-lg font-medium text-slate-600 border border-slate-200 shadow-sm text-sm cursor-not-allowed opacity-50">
-                            📷 Album in arrivo...
+                           class="inline-block bg-white px-4 py-2 rounded-lg font-medium text-slate-800 hover:bg-slate-50 transition-colors border border-slate-200 shadow-sm text-sm">
+                            📷 Visualizza Album Giorno 12
                         </a>
                     </div>
                     </div>
@@ -5253,5 +5253,5 @@ VALUTA E PAGAMENTI:
             }, 100);
         }
     </script>
-<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'96e9115ee40f4c3a',t:'MTc1NTA5NzA3Ny4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'96e92a59244f83a8',t:'MTc1NTA5ODEwMC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
