--- a/index.htm
+++ b/index.htm
@@ -336,4 +336,8 @@
                                     <li>• <strong>Copertura:</strong> Eccellente in tutto il paese</li>
                                     <li>• <strong>Dove comprare:</strong> Aeroporto, negozi Dialog, supermercati</li>
                                     <li>• <strong>Tipo:</strong> SIM fisica e eSIM disponibili</li>
-                                    <li>• <strong>Documenti:</strong
+                                    <li>• <strong>Documenti:</strong> Passaporto necessario</li>
+                                </ul>
+                                <a href="https://www.dialog.lk/buy-best-tourist-sim-plan-in-sri-lanka" 
+                                   target="_blank" 
+                                   class="inline-block bg-red-600 hover:bg-red-700 text-white text-xs px-3 py-1 rou
